# steg-experiments

./: .gitignore  README.md  frame.py  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  util.py
scripts/: byte_finder.py  compare.py  decode_frame.py  decode_video.py  encode_file.py  lorem_ipsum.py  rainbow.py  video_frames.py
steg/: frame.py  steg.py  util.py
tests/: conftest.py  test_main.py
tests/test_data/: loremipsum.txt
webgpu/: README.md  frame_decoder_shader.wgsl  index.html  index.js
