[project]
name = "youtube-steg"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "Pillow",
    "numpy",
    "ffmpeg-python",
]

[project.optional-dependencies]
test = [
    "pytest"
]
types = [
    "mypy",
    "types-Pillow"
]

[project.scripts]
encode_file = "scripts.encode_file:main"
decode_video = "scripts.decode_video:main"
rainbow = "scripts.rainbow:main"
compare = "scripts.compare:main"
byte_finder = "scripts.byte_finder:main"
decode_frame = "scripts.decode_frame:main"
video_frames = "scripts.video_frames:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "steg"